--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+===== 1.7 (Jan ??, 2013) =====
+* Introduced library service; FBReader loads library in background
+
 ===== 1.6.10 (Jan ??, 2013) =====
 * Fixed issue for XHTML files with several body tags (sometimes produced by Calibre)
 
